Finish mock implementation of publishing data to server

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 
 monitor_speed = 115200
 board_build.partitions = huge_app.csv
+
+lib_deps =
+  https://github.com/bblanchon/ArduinoJson.git#v6.15.2
