--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -16,5 +16,13 @@ framework = arduino
 monitor_speed = 115200
 board_build.partitions = huge_app.csv
 
+src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/>
+
 lib_deps =
   https://github.com/bblanchon/ArduinoJson.git#v6.15.2
+
+[env:release]
+src_filter = ${env.src_filter} -<mock/main.cpp> 
+
+[env:mock]
+src_filter = ${env.src_filter} -<main.cpp> 
