--- a/platformio.ini
+++ b/platformio.ini
@@ -37,3 +37,5 @@ src_filter = ${env.src_filter} -<mock/main.cpp>
 
 [env:mock]
 src_filter = ${env.src_filter} -<main.cpp> 
+
+upload_port = /dev/cu.SLAB_USBtoUART
