--- a/platformio.ini
+++ b/platformio.ini
@@ -30,9 +30,12 @@ lib_deps =
   https://github.com/jmstriegel/Plantower_PMS7003.git
   https://github.com/ERROPiX/ESP32_AnalogWrite.git#0.2
   https://github.com/arduino-libraries/NTPClient.git#3.2.0
+  https://github.com/marian-craciunescu/ESP32Ping.git
 
 [env:release]
 src_filter = ${env.src_filter} -<mock/main.cpp> 
 
 [env:mock]
 src_filter = ${env.src_filter} -<main.cpp> 
+
+upload_port = /dev/cu.SLAB_USBtoUART
