Fix device state on mock

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,4 +38,6 @@ board_build.partitions = huge_app.csv
 
 [env:mock]
 src_filter = ${env.src_filter} -<main.cpp>
+build_flags = 
+  -D IS_MOCK
 board_build.partitions = huge_app.csv
